--- a/style.css
+++ b/style.css
@@ -1,9 +1,207 @@
+/* TOP SECTION */
+
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap");
+
+:root {
+  --main-background: hsl(222, 26%, 31%);
+  --top-section-text: white;
+  --screen-background: hsl(224, 36%, 15%);
+  --screen-text: white;
+  --keypad-background: hsl(223, 31%, 20%);
+  --shadow-size: 0px 2.5px 0px 0px;
+  --key: hsl(30, 25%, 89%);
+  --key-shadow: hsl(28, 16%, 65%) var(--shadow-size);
+  --special-function: hsl(225, 21%, 49%);
+  --special-function-shadow: hsl(224, 28%, 35%) var(--shadow-size);
+  --thumb-background: hsl(6, 63%, 50%);
+  --equal-operator-shadow: hsl(6, 70%, 34%) var(--shadow-size);
+  --key-text-color: hsl(221, 14%, 31%);
+  --primary-text-color: hsl(0, 0%, 100%);
+
+  --attribution-text: var(--primary-text-color);
+  --attribution-text-highlighted: hsl(0, 0%, 66%);
+}
+
+.second-theme {
+  --main-background: hsl(0, 0%, 90%);
+  --top-section-text: var(--key-text-color);
+  --screen-background: hsl(0, 0%, 93%);
+  --screen-text: var(--key-text-color);
+  --keypad-background: hsl(0, 5%, 81%);
+  --shadow-size: 0px 2.5px 0px 0px;
+  --key: hsl(45, 7%, 89%);
+  --key-shadow: hsl(28, 16%, 65%) var(--shadow-size);
+  --special-function: hsl(185, 42%, 37%);
+  --special-function-shadow: hsl(185, 58%, 25%) var(--shadow-size);
+  --thumb-background: hsl(25, 98%, 40%);
+  --equal-operator-shadow: hsl(25, 99%, 27%) var(--shadow-size);
+  --key-text-color: hsl(60, 10%, 19%);
+  --primary-text-color: hsl(0, 0%, 100%);
+
+  --attribution-text: var(--key-text-color);
+  --attribution-text-highlighted: var(--special-function);
+}
+
+body {
+  margin: 0;
+  background-color: var(--main-background);
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 400px;
+  height: 500px;
+  font-family: "League Spartan";
+  color: var(--primary-text-color);
+  display: flex;
+  flex-direction: column;
+}
+
+.top-section {
+  display: flex;
+  justify-content: right;
+  align-items: flex-end;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.top-title {
+  margin: 0;
+  flex: 1;
+  padding-left: 5px;
+  color: var(--top-section-text);
+}
+
+.theme-text {
+  font-size: 7px;
+  letter-spacing: 1px;
+  padding: 6px;
+  color: var(--top-section-text);
+}
+
+.theme-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
+
+.theme-section > * {
+  box-sizing: border-box;
+}
+
+.theme-numbers {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 10px;
+  padding: 0 3px;
+  color: var(--top-section-text);
+}
+
+.theme-number {
+  width: 11px;
+  text-align: center;
+}
+
+.slider-track {
+  background: var(--keypad-background);
+  width: 50px;
+  height: 17px;
+  border-radius: 9px;
+  display: flex;
+  align-items: center;
+  padding: 0 3px;
+  /* justify-content: end; */
+}
+
+.slider-thumb {
+  background-color: var(--thumb-background);
+  width: 11px;
+  height: 11px;
+  border-radius: 100%;
+}
+
+/* SCREEN SECTION */
+
+.screen-section {
+  background-color: var(--screen-background);
+  height: 18%;
+  border-radius: 5px;
+  margin-bottom: 17px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.screen-text {
+  font-size: 40px;
+  color: var(--screen-text);
+}
+
+/* KEYPAD SECTION */
+
+.keypad-section {
+  background: var(--keypad-background);
+  border-radius: 5px;
+  flex: 1;
+  margin-bottom: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 20%);
+  padding: 20px;
+  gap: 20px;
+  justify-content: center;
+}
+
+.keypad-section button {
+  border: none;
+  font-family: "League Spartan";
+  cursor: pointer;
+  padding: 0;
+  padding-top: 6px;
+  border-radius: 7px;
+}
+
+.calculator-key {
+  width: 70px;
+  font-size: 32px;
+  color: var(--key-text-color);
+  background-color: var(--key);
+  box-shadow: var(--key-shadow);
+}
+
+.special-key {
+  grid-column: span 2;
+  font-size: 32px;
+  color: var(--primary-text-color);
+}
+
+.special-function {
+  color: var(--primary-text-color);
+  font-size: 19px;
+  background-color: var(--special-function);
+  box-shadow: var(--special-function-shadow);
+}
+
+.equal-key {
+  background-color: var(--thumb-background);
+  box-shadow: var(--equal-operator-shadow);
+}
+
 /* ATTRIBUTION */
 
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: var(--attribution-text);
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--attribution-text-highlighted);
+  text-decoration: none;
 }
+
+/* THEMES */
