--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@ body {
 @media only screen and (max-width: 300px) {
   body {
     max-width: 100%;
+    align-items: flex-start;
   }
 
   .container {
@@ -324,6 +325,7 @@ body {
   html,
   body {
     height: 100%;
+    align-items: flex-start;
   }
 
   .container {
